[package]
name = "markdown-oxide-zed"
version = "0.1.0"
edition = "2021"

[dependencies]
zed_extension_api = "0.0.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

